--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test:ex:01": "jest 01-exercise --watch",
-    "test:ex:02": "jest 02-exercise --watch"
+    "test01": "jest 01-exercise --watch",
+    "test02": "jest 02-exercise --watch"
   },
   "repository": {
     "type": "git",
